End of the commit

--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
     <link href="css/style.css" rel="stylesheet">
     <!-- ionic/angularjs js -->
     <script src="js/riot+compiler.min.js"></script>
+    <script src="js/minivents.min.js"></script>
     <script src="js/ikki.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
