Fixed buggy crashing

--- a/www/index.html
+++ b/www/index.html
@@ -25,8 +25,8 @@
     <script src="tag/app.html" type="riot/tag"></script>
     <!-- mount the tag -->
     <script>
-    var manager = new Manager() // Create a store instance.
-    RiotControl.addStore(manager)
+   // var manager = new Manager() // Create a store instance.
+    //RiotControl.addStore(manager)
     riot.mount('*');
     </script>
 </head>
