--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
     <script src="lib/riotcontrol.js"></script>
     <script src="lib/ikki.min.js"></script>
     <script src="lib/lockr.min.js"></script>
+    <script src="lib/qwest.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <!-- your app's js -->
