--- a/www/index.html
+++ b/www/index.html
@@ -26,9 +26,13 @@
     <script src="tag/app.html" type="riot/tag"></script>
     <!-- mount the tag -->
     <script>
-   // var manager = new Manager() // Create a store instance.
-    //RiotControl.addStore(manager)
+    var manager = new Manager(); // Create a store instance.
+    RiotControl.addStore(manager)
     riot.mount('*');
+    RiotControl.trigger('get_setting');
+    var global;
+    global = manager.getSetting();
+    
     </script>
 </head>
 
