--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,8 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <!-- your app's js -->
-    <script src="js/settingManager.js"></script>
+    <script src="js/settingStore.js"></script>
+    <script src="js/formStore.js"></script>
     <!-- ui tags -->
     <script src="tag/forms.html" type="riot/tag"></script>
     <script src="tag/tabs.html" type="riot/tag"></script>
@@ -27,12 +28,11 @@
     <!-- mount the tag -->
     <script>
     var manager = new Manager(); // Create a store instance.
+    var formStore = new Form();
     RiotControl.addStore(manager)
+    RiotControl.addStore(formStore)
     riot.mount('*');
     RiotControl.trigger('get_setting');
-    var global;
-    global = manager.getSetting();
-    
     </script>
 </head>
 
