--- a/www/index.html
+++ b/www/index.html
@@ -29,8 +29,10 @@
     <script src="tag/tabs.html" type="riot/tag"></script>
     <script src="tag/settings.html" type="riot/tag"></script>
     <script src="tag/app.html" type="riot/tag"></script>
+    <script src="tag/lead.html" type="riot/tag"></script>
     <!-- mount the tag -->
     <script>
+    window.location = '#main'
     if ('addEventListener' in document) {
         document.addEventListener('DOMContentLoaded', function() {
             FastClick.attach(document.body);
