--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
     <script src="lib/lockr.min.js"></script>
     <script src="lib/qwest.min.js"></script>
     <script src="lib/jsmodal.min.js"></script>
+    <script src="lib/guid.js"></script>
     <script type='application/javascript' src='lib/fastclick.js'></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -32,7 +33,7 @@
     <script src="tag/lead.html" type="riot/tag"></script>
     <!-- mount the tag -->
     <script>
-    window.location = '#main'
+    window.location = '#settings'
     if ('addEventListener' in document) {
         document.addEventListener('DOMContentLoaded', function() {
             FastClick.attach(document.body);
